[gd_scene load_steps=23 format=2]

[ext_resource path="res://ARPG/Ennemies/Boss/FireBoss/FireBoss.gd" type="Script" id=1]
[ext_resource path="res://assets/images/Ennemis/FireMountain/Boss/bossfire.png" type="Texture" id=2]
[ext_resource path="res://assets/images/Ennemis/FireMountain/Boss/bossfire01firemovement.png" type="Texture" id=3]
[ext_resource path="res://assets/images/Ennemis/FireMountain/Boss/bossfire1firemovement.png" type="Texture" id=4]
[ext_resource path="res://assets/images/Ennemis/FireMountain/Boss/bossfire2defense.png" type="Texture" id=5]
[ext_resource path="res://assets/images/Ennemis/FireMountain/Boss/bossfire3lanceflamme.png" type="Texture" id=6]
[ext_resource path="res://state/StateMachine.tscn" type="PackedScene" id=7]
[ext_resource path="res://ARPG/Ennemies/Boss/IceBoss/IceBossFSM.gd" type="Script" id=8]
[ext_resource path="res://ARPG/Ennemies/Boss/FireBoss/Spawn.gd" type="Script" id=9]
[ext_resource path="res://ARPG/Ennemies/Boss/FireBoss/Wait.gd" type="Script" id=10]
[ext_resource path="res://ARPG/Ennemies/Boss/FireBoss/StraightShot.gd" type="Script" id=11]
[ext_resource path="res://ARPG/Ennemies/Boss/FireBoss/SpiralShot.gd" type="Script" id=12]
[ext_resource path="res://ARPG/Ennemies/Boss/FireBoss/ScatterShot.gd" type="Script" id=13]
[ext_resource path="res://ARPG/Ennemies/Boss/FireBoss/CardinalShot.gd" type="Script" id=14]
[ext_resource path="res://ARPG/Ennemies/Boss/FireBoss/Die.gd" type="Script" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 266.859, 236.227 )

[sub_resource type="Animation" id=3]
resource_name = "Attacking"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Die"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3, 1.5, 1.7, 1.9, 2.1, 2.3, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -20.0, 20.0, -20.0, 20.0, -20.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=5]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Prepare"
length = 2.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.9, 1.1, 1.3, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.9, 1.1, 1.3, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 24, 24 ), Vector2( 0, 0 ), Vector2( 24, 24 ), Vector2( 0, 0 ), Vector2( 24, 24 ), Vector2( 0, 0 ), Vector2( 24, 24 ), Vector2( 0, 0 ), Vector2( 24, 24 ), Vector2( 0, 0 ), Vector2( 24, 24 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.9, 1.1, 1.3, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ), Vector2( 1.4, 1.4 ), Vector2( 1, 1 ), Vector2( 1.4, 1.4 ), Vector2( 1, 1 ), Vector2( 1.4, 1.4 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3, 1.5, 1.7, 1.9, 2.1, 2.3, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -20.0, 20.0, -20.0, 20.0, -20.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="FireBoss" type="KinematicBody2D"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 913.674, 174.732 )
scale = Vector2( 0.1, 0.1 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 4
offset = Vector2( 24, 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attacking = SubResource( 3 )
anims/Die = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Prepare = SubResource( 6 )
anims/Spawn = SubResource( 7 )

[node name="StateMachine" parent="." instance=ExtResource( 7 )]
script = ExtResource( 8 )

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Wait" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="StateMachine/Wait"]
wait_time = 2.0

[node name="StraightShot" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="Timer" type="Timer" parent="StateMachine/StraightShot"]
wait_time = 0.5

[node name="SpiralShot" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Timer" type="Timer" parent="StateMachine/SpiralShot"]
wait_time = 0.1

[node name="ScatterShot" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="CardinalShot" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="Timer1" type="Timer" parent="StateMachine/CardinalShot"]
wait_time = 0.3

[node name="Timer2" type="Timer" parent="StateMachine/CardinalShot"]
wait_time = 0.3

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Tween" type="Tween" parent="."]

[node name="Position2DShot" type="Position2D" parent="."]
position = Vector2( -13.0142, 175.691 )
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="StateMachine/Wait/Timer" to="StateMachine/Wait" method="_on_Timer_timeout"]
[connection signal="timeout" from="StateMachine/StraightShot/Timer" to="StateMachine/StraightShot" method="_on_Timer_timeout"]
[connection signal="timeout" from="StateMachine/SpiralShot/Timer" to="StateMachine/SpiralShot" method="_on_Timer_timeout"]
[connection signal="timeout" from="StateMachine/CardinalShot/Timer1" to="StateMachine/CardinalShot" method="_on_Timer1_timeout"]
[connection signal="timeout" from="StateMachine/CardinalShot/Timer2" to="StateMachine/CardinalShot" method="_on_Timer2_timeout"]
